2010-03-01  Ian Beckwith  <ianb@erislabs.net>

	* Removed autotools-generated files from git repo
	  use ./prebuild to regenerate.
	* Lower required automake version to 1.10.
	* prebuild: try and find a sane set of autotools, then call
	  autoreconf -vi
	* Add autotools-generated files to .gitignore
	* Bump version to 2.2.7
	* cnn: fix URL.
	* cnn.test: Disable. Bloody CNN now needs javascript for search,
	  so should be tested manually.
	* W, yahoo: fix tests.
	* Remove unused '-quiet' option.
	* Update AUTHORS.
	* Add a note to appendix 1 of HACKING about updating AUTHORS.
	* runtests: explicitly use elvi and config from source tree,
	  now works when surfraw is not installed (but you need to have
	  run make).
	* test/Makefile.am: fix bookfinder typo, add bing.test.
	* remove leading 'sr ' from command lines for following tests:
	    acronym aur bing cliki gcache genportage google javasun l1sp
	    lsm mathworld mininova piratebay youtube
	* HACKING, README, test/README: document autotools and test
	  suite changes.
	* Makefile.am: add surfraw.conf to BUILT_SOURCES so it is
	  made by 'make'. This may be a misuse of BUILT_SOURCES.

2010-02-22  Ivy Foster  <joyfulgirl@archlinux.us>

	* Added `-ns|-newscreen' switch for setting $SURFRAW_new_screen.

2010-02-15  James Rowe  <jnrowe@gmail.com>

	* elvi/imdb: Fixes for upstream search changes.  Thanks to Sadako.
	* New elvi: bookfinder, thanks to Ivy Foster.

2010-02-14  James Rowe  <jnrowe@gmail.com>

	* Added $SURFRAW_screen_args for passing arguments to the defined screen
	  tool, thanks to Ivy Foster.
	* Support for using tmux as $SURFRAW_screen, thanks once again to Ivy
	  Foster.
	* New elvi: bugmenot, thanks to Ivy Foster.

2010-02-05  Ian Beckwith  <ianb@erislabs.net>

	* Added options for 'aur' elvi.
	  Patch from Ivy Foster.

2010-02-02  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: bing, thanks to tczy.
	  Elvi number One Hundred!!!1!

2010-01-26  James Rowe  <jnrowe@gmail.com>
