@@ -1,0 +1,6 @@
+scroogle surfraw
+fast unix command line interface
+scroogle -nossl surfraw
+fast unix command line interface
+scroogle -lang=en surfraw
+fast unix command line interface
